--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: shop_flow
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,7 +30,39 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  # State management
+  flutter_bloc: ^8.1.6
+  # Code generator (mainly used with cubit & retrofit)
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
+  # Dependency injection
+  get_it: ^7.7.0
+  # Automatically generate code for converting to and from JSON by annotating Dart classes.
+  json_serializable: ^6.8.0
+  json_annotation: ^4.9.0
+  # Networking
+  dio: ^5.7.0
+  retrofit: ^4.4.1
+  retrofit_generator: ^9.1.2
+  pretty_dio_logger: ^1.4.0
+  # Local storage
+  shared_preferences: ^2.3.2
+  # SVG support
+  flutter_svg: ^2.0.10+1
+  # A flutter plugin for adapting screen and font size.Guaranteed to look good on different models - Responsive.
+  flutter_screenutil: ^5.9.3
+  # Onboarding
+  flutter_onboarding_slider: ^1.0.11
+  # Splash Screen Animation
+  animated_splash_screen: ^1.3.0
+  page_transition: ^2.1.0
+  lottie: ^3.1.2
+  # For caching network images.
+  cached_network_image: ^3.4.1
+  # For handling products deletion
+  flutter_slidable: ^3.1.1
+  # Icons styling
+  font_awesome_flutter: ^10.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,7 +84,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
