--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   flutter_slidable: ^3.1.1
   # Icons styling
   font_awesome_flutter: ^10.7.0
+  # A build system for Dart code generation and modular compilation.
+  build_runner: ^2.4.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
