--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   build_runner: ^2.4.12
   # Customize Flutter's default white native splash screen.
   flutter_native_splash: ^2.4.1
+  # A Flutter package to use fonts from fonts.google.com.
+  google_fonts: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
