--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -62,6 +62,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: android/app/build/outputs/flutter-apk/app-release.apk # Path to the APK
+          # asset_path: android/app/build/outputs/flutter-apk/app-release.apk
+          asset_path: build/app/outputs/flutter-apk/app-release.apk
+          # asset_path: ../build/app/outputs/flutter-apk/app-release.apk
           asset_name: shop_flow_v1.0.${{ github.run_number }}.apk
           asset_content_type: application/vnd.android.package-archive
