--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -72,7 +72,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/app/outputs/flutter-apk/app-debug.apk
+          file: ../build/app/outputs/flutter-apk/app-release.apk
           tag: v1.0.${{ github.run_number }}
           overwrite: true
           body: "New APK release for Shop Flow v1.0.${{ github.run_number }}"
